--- a/my_app/templates/my_app/job_detail.html
+++ b/my_app/templates/my_app/job_detail.html
@@ -70,6 +70,7 @@
     <div class="job-meta">
       <strong>Ref No:</strong> {{ job.reference_number }}<br />
       <strong>Location:</strong> {{ job.location }} <br />
+      <strong>Experience:</strong> {{ job.experience }} <br />
       <strong>Type:</strong> {{ job.job_type }} <br />
       <strong>Salary:</strong> {{ job.salary|default:'Not disclosed' }}
     </div>
